--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.12.3",
     "@mui/x-date-pickers": "^6.3.1",
+    "@mui/x-date-pickers-pro": "^6.3.1",
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
