--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@mui/material": "^5.12.3",
     "@mui/x-date-pickers": "^6.3.1",
     "@mui/x-date-pickers-pro": "^6.3.1",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-redux": "^7.1.25",
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
